--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -21,6 +21,40 @@
     text-decoration: none;
 }
 
+.header-nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header-nav li {
+    margin-left: 2rem;
+}
+
+.header-nav a {
+    color: #333;
+    text-decoration: none;
+}
+
+.header-nav a:hover {
+    color: #0264ce;
+}
+
+.logout-btn {
+    background-color: transparent;
+    color: #333;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    text-decoration: none;
+}
+
+.logout-btn:hover {
+    color: #0264ce;
+}
+
+
 /* main content */
 main {
     max-width: 1200px;
