--- a/src/public/css/stamp.css
+++ b/src/public/css/stamp.css
@@ -3,7 +3,6 @@
     max-width: 1200px;
     margin: 2rem auto;
     padding: 2rem;
-    background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -26,10 +25,10 @@
 }
 
 .attendance-buttons button {
-    padding: 1rem 2rem;
-    font-size: 1rem;
-    background-color: #0264ce;
-    color: #fff;
+    padding: 3rem 6rem;
+    font-size: 2rem;
+    background-color: #fff;
+    color: #333;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -37,18 +36,6 @@
 }
 
 .attendance-buttons button:hover {
-    background-color: #0056b3;
+    background-color: #e9ecefc9;
 }
 
-/* footer */
-.footer {
-    background-color: #fff;
-    color: #333;
-    text-align: center;
-    padding: 1rem;
-}
-
-.footer-content {
-    max-width: 1200px;
-    margin: 0 auto;
-}
