--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -37,13 +37,14 @@
 .header-nav a {
     color: #333;
     text-decoration: none;
+    font-size: 1rem;
 }
 
 .header-nav a:hover {
     color: #0264ce;
 }
 
-.logout-btn {
+.logout-button {
     background-color: transparent;
     color: #333;
     border: none;
@@ -52,7 +53,7 @@
     text-decoration: none;
 }
 
-.logout-btn:hover {
+.logout-button:hover {
     color: #0264ce;
 }
 
